updated stats variable

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <div class="col"></div>
         </div>
     </div>
+    
+        <div id="pokemonstatchart"></div>
 
 
     <script src="scripts/pokeapi.js"></script>
