Added background to pokemon image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div id="pokemonimg">
             <img id="pokemonfront"></img> <img id="pokemonback"></img>
         </div>
-        <h2>#<span id="pokemonid"></span> <span id="pokemonname"></span></h2>
+        
+        <div><h2>#<span id="pokemonid"></span> <span id="pokemonname"></span></h2></div>
 
         <div class="container-fluid">
             <div class="row">
@@ -44,9 +45,14 @@
                 <div class="col"></div>
             </div>
         </div>
-
-        <div>
-            <h3>Stats Overview</h3><span id="pokemonstatchart"></span></div>
+        
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h4>Stats Overview</h4><span id="pokemonstatchart"></span>
+                </div>
+            </div>
+        </div>
     </Section>
 
 
