--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap" rel="stylesheet">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
@@ -23,7 +23,7 @@
     <Section id="screen">
         <div id="inputbox"><input id="NameInput" type="text" placeholder="Enter Pokemon Name/Index"></div>
         <br>
-        <div><button type="reset" onClick="NameSearch()">WHO'S THAT POKEMON</button></div>
+        <div><button type="reset" onClick="NameSearch()"> WHO'S THAT POKEMON </button></div>
         <br>
         <div id="pokemonimg">
             <img id="pokemonfront"></img> <img id="pokemonback"></img>
@@ -41,7 +41,7 @@
                     <p>Weight : <span id="pokemonweight"></span></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p>Type : <span id="pokemontype"></span></p>
+                    <p>Type : <span id="pokemontype1"></span><span id="pokemontype2"></span></p>
                 </div>
                 <div class="col"></div>
             </div>
