--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <div class="row">
                 <div class="col"></div>
                 <div class="col-12 col-sm-3">
-                    <p>Height : <span id="pokemonheight"></span></p>
+                    <p><span id="pokemonheight"></span></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p>Weight : <span id="pokemonweight"></span></p>
+                    <p><span id="pokemonweight"></span></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p>Type : <span id="pokemontype1"></span><span id="pokemontype2"></span></p>
+                    <p><span id="pokemontype1"></span><span id="pokemontype2"></span></p>
                 </div>
                 <div class="col"></div>
             </div>
