added error message + logo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <body>
 
     <Section id="screen">
+        <div><img id="logo" src="background/pokemon_logo.png"></div>
+        <br>
         <div id="inputbox"><input id="NameInput" type="text" placeholder="Enter Pokemon Name/Index"></div>
         <br>
         <div><button type="reset" onClick="NameSearch()"> WHO'S THAT POKEMON </button></div>
