Deploy Try/Catch method

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                 </div>
             </div>
         </div>
+        
+        <div class="container-fluid">
+            <p id="doubledamagefrom"></p>
+            <p id="doubledamageto"></p>
+        </div>
     </Section>
 
 
