streamline js code

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
         </div>
         
         <div class="container-fluid">
-            <p id="doubledamagefrom"></p>
-            <p id="doubledamageto"></p>
+            <h4>Damange Overview</h4>
+            <span id="doubledamagefrom"></span>
+            <br>
+            <span id="doubledamageto"></span>
         </div>
     </Section>
 
