Bug fixed on pokemon without 2nd Type which resulted in JS error

--- a/index.html
+++ b/index.html
@@ -58,10 +58,20 @@
         </div>
         
         <div class="container-fluid">
-            <h4>Damange Overview</h4>
-            <span id="doubledamagefrom"></span>
+            <h4>Damage Overview</h4>
+            <span id="doubledamagefrom"></span><span id="doubledamagefrom2"></span>
             <br>
-            <span id="doubledamageto"></span>
+            <span id="doubledamageto"></span><span id="doubledamage2"></span>
+            <br>
+            <br>
+            <span id="halfdamagefrom"></span><span id="halfdamagefrom2"></span>
+            <br>
+            <span id="halfdamageto"></span><span id="halfdamageto2"></span>
+            <br>
+            <br>
+            <span id="nodamagefrom"></span><span id="nodamagefrom2"></span>
+            <br>
+            <span id="nodamageto"></span><span id="nodamageto2"></span>
         </div>
     </Section>
 
