updated background image

--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-8">
+                    <div class="col"></div>
+                    <div class="col-10 col-md-8">
                         <h4>Stats Overview</h4><span id="pokemonstatchart"></span>
                     </div>
-                    <div class="col-2"></div>
+                    <div class="col"></div>
                 </div>
             </div>
 
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-8">
+                    <div class="col"></div>
+                    <div class="col-10 col-md-8">
                         <h4>Damage Overview*</h4>
                     </div>
-                    <div class="col-2"></div>
+                    <div class="col"></div>
                 </div>
                 <span id="doubledamagefrom"></span><span id="doubledamagefrom2"></span>
                 <br>
