--- a/test/test.html
+++ b/test/test.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="../scripts/pokeapi.js"></script>
     
     <!-- Load Tests -->
-    <script type="text/javascript" src="spec/poketest.js"></script>
+    <script type="text/javascript" src="specs/poketest.js"></script>
 </head>
 <body>
     
