Updated html with bootstrap col code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p><span id="pokemonweight"></span></p>
                     </div>
                     <div class="col-12 col-sm-3">
-                        <p><span id="pokemontype1"></span><span id="pokemontype2"></span></p>
+                        <p><span id="pokemontype"></span><span id="pokemontype1"></span><span id="pokemontype2"></span></p>
                     </div>
                     <div class="col"></div>
                 </div>
@@ -66,26 +66,87 @@
                 <div class="row">
                     <div class="col"></div>
                     <div class="col-10 col-md-8">
-                        <h4>Damage Overview*</h4>
+                        <h4>Damage Overview</h4>
                     </div>
                     <div class="col"></div>
                 </div>
-                <span id="doubledamagefrom"></span><span id="doubledamagefrom2"></span>
-                <br>
-                <span id="doubledamageto"></span><span id="doubledamage2"></span>
-                <br>
-                <br>
-                <span id="halfdamagefrom"></span><span id="halfdamagefrom2"></span>
-                <br>
-                <span id="halfdamageto"></span><span id="halfdamageto2"></span>
-                <br>
-                <br>
-                <span id="nodamagefrom"></span><span id="nodamagefrom2"></span>
-                <br>
-                <span id="nodamageto"></span><span id="nodamageto2"></span>
+                <div id="damageoverview">
+            <!-- to convert the results into rows with col -->
+                <!--<span id="doubledamagefrom"></span><span></span><span id="doubledamagefrom2"></span>-->
+                <!--<br>-->
+                <!--<span id="doubledamageto"></span><span id="doubledamage2"></span>-->
+                <!--<br>-->
+                <!--<br>-->
+                <!--<span id="halfdamagefrom"></span><span id="halfdamagefrom2"></span>-->
+                <!--<br>-->
+                <!--<span id="halfdamageto"></span><span id="halfdamageto2"></span>-->
+                <!--<br>-->
+                <!--<br>-->
+                <!--<span id="nodamagefrom"></span><span id="nodamagefrom2"></span>-->
+                <!--<br>-->
+                <!--<span id="nodamageto"></span><span id="nodamageto2"></span>-->
+                <!--</div>-->
+                <div class="row">
+                    <div class="col-12 col-lg-4">
+                        <span id="ddf"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="doubledamagefrom"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="doubledamagefrom2"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="ddt"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="doubledamageto"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="doubledamageto2"></span>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="col-12 col-lg-4">
+                        <span id="hdf"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="halfdamagefrom"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="halfdamagefrom2"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="hdt"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="halfdamageto"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="halfdamageto2"></span>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="col-12 col-lg-4">
+                        <span id="ndf"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="nodamagefrom"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="nodamagefrom2"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="ndt"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="nodamageto"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span id="nodamageto2"></span>
+                    </div>
+                </div>
             </div>
-
-            <span id="disclaimer"></span>
         </section>
     </div>
 
