Added Class to reduce amount of repeated CSS input

--- a/index.html
+++ b/index.html
@@ -71,79 +71,64 @@
                     <div class="col"></div>
                 </div>
                 <div id="damageoverview">
-            <!-- to convert the results into rows with col -->
-                <!--<span id="doubledamagefrom"></span><span></span><span id="doubledamagefrom2"></span>-->
-                <!--<br>-->
-                <!--<span id="doubledamageto"></span><span id="doubledamage2"></span>-->
-                <!--<br>-->
-                <!--<br>-->
-                <!--<span id="halfdamagefrom"></span><span id="halfdamagefrom2"></span>-->
-                <!--<br>-->
-                <!--<span id="halfdamageto"></span><span id="halfdamageto2"></span>-->
-                <!--<br>-->
-                <!--<br>-->
-                <!--<span id="nodamagefrom"></span><span id="nodamagefrom2"></span>-->
-                <!--<br>-->
-                <!--<span id="nodamageto"></span><span id="nodamageto2"></span>-->
-                <!--</div>-->
                 <div class="row">
                     <div class="col-12 col-lg-4">
-                        <span id="ddf"></span>
+                        <span class="toandfrom" id="ddf"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="doubledamagefrom"></span>
+                        <span class="ov1" id="doubledamagefrom"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="doubledamagefrom2"></span>
+                        <span class="ov2" id="doubledamagefrom2"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="ddt"></span>
+                        <span id="ddt" class="toandfrom"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="doubledamageto"></span>
+                        <span class="ov1" id="doubledamageto"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="doubledamageto2"></span>
-                    </div>
-                    <br>
-                    <br>
-                    <div class="col-12 col-lg-4">
-                        <span id="hdf"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span id="halfdamagefrom"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span id="halfdamagefrom2"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span id="hdt"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span id="halfdamageto"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span id="halfdamageto2"></span>
+                        <span class="ov2" id="doubledamageto2"></span>
                     </div>
                     <br>
                     <br>
                     <div class="col-12 col-lg-4">
-                        <span id="ndf"></span>
+                        <span class="toandfrom" id="hdf"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="nodamagefrom"></span>
+                        <span class="ov1" id="halfdamagefrom"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="nodamagefrom2"></span>
+                        <span class="ov2" id="halfdamagefrom2"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="ndt"></span>
+                        <span class="toandfrom" id="hdt"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="nodamageto"></span>
+                        <span class="ov1" id="halfdamageto"></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <span id="nodamageto2"></span>
+                        <span class="ov2" id="halfdamageto2"></span>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="col-12 col-lg-4">
+                        <span class="toandfrom" id="ndf"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span class="ov1" id="nodamagefrom"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span class="ov2" id="nodamagefrom2"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span class="toandfrom" id="ndt"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span class="ov1" id="nodamageto"></span>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <span class="ov2" id="nodamageto2"></span>
                     </div>
                 </div>
             </div>
