Added additional Jasmine Test Scenario

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
 
 <!--To be included in the final product-->
-    <!--<audio controls autoplay loop>-->
+    <!--<audio controls loop>-->
     <!--      <source src="audio/pokemongame.mp3" type="audio/mp3">-->
     <!--        Your browser does not support the audio element.-->
     <!--</audio>-->
