Updated folder name & READMe.MD

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div id="screen">
-        <div><img id="logo" src="background/pokemon_logo.png"></div>
+        <div><img id="logo" src="images/pokemon_logo.png"></div>
         <br>
         <div id="inputbox"><input id="NameInput" type="text" placeholder="Enter Pokemon Name/Index"></div>
         <br>
@@ -33,7 +33,7 @@
             </div>
 
             <div>
-                <h2><img id="pokeball" src="background/pokeball.png" alt="#"></img><span id="pokemonid"></span><span id="pokemonname"></span></h2>
+                <h2><img id="pokeball" src="images/pokeball.png" alt="#"></img><span id="pokemonid"></span><span id="pokemonname"></span></h2>
             </div>
 
             <div class="container-fluid">
@@ -135,11 +135,10 @@
         </section>
     </div>
 
-<!--To be included in the final product-->
-    <!--<audio controls loop>-->
-    <!--      <source src="audio/pokemongame.mp3" type="audio/mp3">-->
-    <!--        Your browser does not support the audio element.-->
-    <!--</audio>-->
+    <audio controls loop>
+          <source src="audio/pokemongame.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+    </audio>
 
     <script src="scripts/pokeapi.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
