--- a/index.html
+++ b/index.html
@@ -17,132 +17,129 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8.14.0/dist/sweetalert2.all.min.js"></script>
 
-<body>
-    <div id="screen">
-        <div><img id="logo" src="images/pokemon_logo.png"></div>
-        <br>
-        <div id="inputbox"><input id="NameInput" type="text" placeholder="Enter Pokemon Name/Index"></div>
-        <br>
-        <div><button type="reset" onClick="NameSearch()"> WHO'S THAT POKEMON </button></div>
-        <br>
+    <body>
+        <div id="screen">
+            <div><img id="logo" src="images/pokemon_logo.png"></div>
+            <br>
+            <div id="inputbox"><input id="NameInput" type="text" placeholder="Enter Pokemon Name/Index"></div>
+            <br>
+            <div><button type="reset" onClick="NameSearch()"> WHO'S THAT POKÉMON </button></div>
+            <br>
 
-        <section id="results">
-            <div id="pokemonimg">
-                <img id="pokemonfront"></img> <img id="pokemonback"></img>
-            </div>
-
-            <div>
-                <h2><img id="pokeball" src="images/pokeball.png" alt="#"></img><span id="pokemonid"></span><span id="pokemonname"></span></h2>
-            </div>
-
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col-12 col-sm-3">
-                        <p><span id="pokemonheight"></span></p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p><span id="pokemonweight"></span></p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p><span id="pokemontype"></span><span id="pokemontype1"></span><span id="pokemontype2"></span></p>
-                    </div>
-                    <div class="col"></div>
+            <section id="results">
+                <div id="pokemonimg">
+                    <img id="pokemonfront"></img> <img id="pokemonback"></img>
                 </div>
-            </div>
 
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col-10 col-md-8">
-                        <h4>Stats Overview</h4><span id="pokemonstatchart"></span>
-                    </div>
-                    <div class="col"></div>
+                <div>
+                    <h2><img id="pokeball" src="images/pokeball.png" alt="#"></img><span id="pokemonid"></span><span id="pokemonname"></span></h2>
                 </div>
-            </div>
 
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col-10 col-md-8">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col"></div>
+                        <div class="col-12 col-sm-3">
+                            <p><span id="pokemonheight"></span></p>
+                        </div>
+                        <div class="col-12 col-sm-3">
+                            <p><span id="pokemonweight"></span></p>
+                        </div>
+                        <div class="col-12 col-sm-3">
+                            <p><span id="pokemontype"></span><span id="pokemontype1"></span><span id="pokemontype2"></span></p>
+                        </div>
+                        <div class="col"></div>
+                    </div>
+                </div>
+
+                <div class="container-fluid">
+                    <div class="row">
+                        <h4>Stats Overview</h4>
+                    </div>
+                    <div>
+                        <span id="pokemonstatchart"></span>
+                    </div>
+                </div>
+
+                <div class="container-fluid">
+                    <div class="row">
                         <h4>Damage Overview</h4>
                     </div>
-                    <div class="col"></div>
-                </div>
-                <div id="damageoverview">
-                <div class="row">
-                    <div class="col-12 col-lg-4">
-                        <span class="toandfrom" id="ddf"></span>
+                    <div id="damageoverview">
+                        <div class="row">
+                            <div class="col-12 col-lg-4">
+                                <span class="toandfrom" id="ddf"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov1" id="doubledamagefrom"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov2" id="doubledamagefrom2"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span id="ddt" class="toandfrom"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov1" id="doubledamageto"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov2" id="doubledamageto2"></span>
+                            </div>
+                            <br>
+                            <br>
+                            <div class="col-12 col-lg-4">
+                                <span class="toandfrom" id="hdf"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov1" id="halfdamagefrom"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov2" id="halfdamagefrom2"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="toandfrom" id="hdt"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov1" id="halfdamageto"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov2" id="halfdamageto2"></span>
+                            </div>
+                            <br>
+                            <br>
+                            <div class="col-12 col-lg-4">
+                                <span class="toandfrom" id="ndf"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov1" id="nodamagefrom"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov2" id="nodamagefrom2"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="toandfrom" id="ndt"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov1" id="nodamageto"></span>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <span class="ov2" id="nodamageto2"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov1" id="doubledamagefrom"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov2" id="doubledamagefrom2"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span id="ddt" class="toandfrom"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov1" id="doubledamageto"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov2" id="doubledamageto2"></span>
-                    </div>
-                    <br>
-                    <br>
-                    <div class="col-12 col-lg-4">
-                        <span class="toandfrom" id="hdf"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov1" id="halfdamagefrom"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov2" id="halfdamagefrom2"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="toandfrom" id="hdt"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov1" id="halfdamageto"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov2" id="halfdamageto2"></span>
-                    </div>
-                    <br>
-                    <br>
-                    <div class="col-12 col-lg-4">
-                        <span class="toandfrom" id="ndf"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov1" id="nodamagefrom"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov2" id="nodamagefrom2"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="toandfrom" id="ndt"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov1" id="nodamageto"></span>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <span class="ov2" id="nodamageto2"></span>
-                    </div>
-                </div>
+            </section>
             </div>
-        </section>
-    </div>
 
-    <audio controls loop>
+            <audio controls loop>
           <source src="audio/pokemongame.mp3" type="audio/mp3">
             Your browser does not support the audio element.
     </audio>
 
-    <script src="scripts/pokeapi.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+            <script src="scripts/pokeapi.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
 
 </html>
