--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pokédex - Based on PokéAPI</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap" rel="stylesheet">
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8.14.0/dist/sweetalert2.all.min.js"></script>
 
     <body>
         <div id="screen">
-            <div><img id="logo" src="images/pokemon_logo.png"></div>
+            <div><img id="logo" src="images/pokemon_logo.png" alt="POKÉMON"></div>
             <br>
             <div id="inputbox"><input id="NameInput" type="text" placeholder="Enter Pokemon Name/Index"></div>
             <br>
@@ -31,11 +31,12 @@
 
             <section id="results">
                 <div id="pokemonimg">
-                    <img id="pokemonfront"></img> <img id="pokemonback"></img>
+                    <!-- noimgfound.png is used as if axios is unable to fetch the image file from api, no images will be displayed -->
+                    <img id="pokemonfront" src="images/noimgfound.png" alt="" /> <img id="pokemonback" src="images/noimgfound.png" alt="" />
                 </div>
 
                 <div>
-                    <h2><img id="pokeball" src="images/pokeball.png" alt="#"></img><span id="pokemonid"></span><span id="pokemonname"></span></h2>
+                    <h2><img id="pokeball" src="images/pokeball.png" alt="#" /><span id="pokemonid"></span><span id="pokemonname"></span></h2>
                 </div>
 
                 <div class="container-fluid">
@@ -129,17 +130,21 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </section>
-            </div>
 
+
+        </div>
+        <footer>
             <audio controls loop>
           <source src="audio/pokemongame.mp3" type="audio/mp3">
             Your browser does not support the audio element.
     </audio>
-
-            <script src="scripts/pokeapi.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+            <p>Designed by Yu Cheng</p>
+        </footer>
+        <script src="scripts/pokeapi.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 
 </html>
